Fix, public and document residuals methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,5 +39,7 @@ S3method("summary", "noise.model")
 S3method("noise.model", "default")
 S3method("noise.model", "BioSSA2d")
 S3method("residuals", "BioSSA2d")
+S3method("residuals", "BioSSA3d")
 S3method("residuals", "BioSSA2d.reconstruction")
+S3method("residuals", "BioSSA3d.reconstruction")
 S3method("wcor", "BioSSA2d")
