--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,7 +4,8 @@ Title: A collection of methods for singular spectrum analysis of drosophila embr
 Version: 0.1
 Date: 2014-03-18
 Depends: R (>= 3.0), Rssa (>= 0.10-1), lattice, latticeExtra, rgl
-Imports: stringr, akima, pracma, geometry, tripack
+Imports: stringr, akima, pracma, geometry, tripack, oce
+Suggests: rPython
 Author: Alex Shlemov, Nina Golyandina
 Maintainer: Alex Shlemov <shlemovalex@gmail.com>
 Description: This package provides routines for gene expression SSA analysis.
