--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,7 +11,8 @@ import(oce)
 
 
 export(BioSSA,
-       BioSSAv,
+       BioSSA2d3d,
+       BioSSA3d,
        reconstruct,
        embryo2d,
        embryo3d,
@@ -46,11 +47,11 @@ S3method("residuals", "BioSSA2d.reconstruction")
 S3method("residuals", "BioSSA3d.reconstruction")
 S3method("wcor", "BioSSA2d")
 
-S3method("BioSSAv", "formula")
-S3method("BioSSAv", "embryo3d")
-S3method("residuals", "BioSSAv")
-S3method("residuals", "BioSSAv.reconstruction")
-S3method("reconstruct", "BioSSAv")
-S3method("plot", "BioSSAv")
-S3method("decompose", "BioSSAv")
-S3method("noise.model", "BioSSAv")
+S3method("BioSSA3d", "formula")
+S3method("BioSSA3d", "embryo3d")
+S3method("residuals", "BioSSA2d3d")
+S3method("residuals", "BioSSA2d3d.reconstruction")
+S3method("reconstruct", "BioSSA2d3d")
+S3method("plot", "BioSSA3d")
+S3method("decompose", "BioSSA2d3d")
+S3method("noise.model", "BioSSA3d")
