--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,7 +5,7 @@ Version: 0.2
 Date: 2017-12-08
 Depends: R (>= 3.0), Rssa (>= 0.10-1), lattice, latticeExtra, rgl
 Imports: stringr, akima, pracma, geometry, tripack, oce, alphashape3d
-Suggests: rPython, testthat
+Suggests: rPython, testthat, LinearInterpolator
 Author: Alex Shlemov, Nina Golyandina
 Maintainer: Alex Shlemov <shlemovalex@gmail.com>
 Description: This package provides routines for gene expression SSA analysis.
