--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,10 +23,13 @@ export(BioSSA,
        embryo2d,
        embryo3d,
        read.pce.gene,
+       read.vpc.gene,
        read.emb.data,
        noise.model,
        read.pce,
+       read.vpc,
        extract.gene.pce,
+       extract.gene.vpc,
        decompose,
        rgl.kill.text,
        save.rgl.plot,
